--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "puzzle",
   "version": "1.0.0",
   "private": false,
-  "homepage": "https://lzhabo/github.io/puzzle-lend",
+  "homepage": "https://lzhabo.github.io/puzzle-lend/",
   "dependencies": {
     "@babel/core": "7.12.3",
     "@emotion/core": "^11.0.0",
@@ -49,7 +49,7 @@
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
-    "gh-pages": "^3.2.3",
+    "gh-pages": "^4.0.0",
     "html-webpack-plugin": "4.5.0",
     "identity-img": "^2.0.0",
     "identity-obj-proxy": "3.0.0",
