--- a/package.json
+++ b/package.json
@@ -114,6 +114,10 @@
     "deploy": "gh-pages -d build",
     "lint": "eslint src/**/*.ts[x] --fix ."
   },
+  "engines": {
+    "npm": ">=8.0.0 <9.0.0",
+    "node": ">=16.0.0 <17.0.0"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
