--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,8 @@
 name: Deploy
 
 env:
-  REACT_APP_STAND_DEV: DEV
-  REACT_APP_STAND_PROD: PROD
+  REACT_APP_NODE_ENV_DEV: development
+  REACT_APP_NODE_ENV_PROD: production
 
 on:
   push:
@@ -19,17 +19,17 @@ jobs:
       - name: Deploy to DEVELOP
         if: endsWith(github.ref, '/dev')
         run: |
-          echo "REACT_APP_STAND=${REACT_APP_STAND_DEV}" >> $GITHUB_ENV
+          echo "REACT_APP_NODE_ENV=${REACT_APP_NODE_ENV_DEV}" >> $GITHUB_ENV
           echo "HEROKU_APP_NAME=puzzle-lend-dev" >> $GITHUB_ENV
       - name: Deploy to PROD
         if: endsWith(github.ref, '/master')
         run: |
-          echo "REACT_APP_STAND=${REACT_APP_STAND_PROD}" >> $GITHUB_ENV
+          echo "REACT_APP_NODE_ENV=${REACT_APP_NODE_ENV_PROD}" >> $GITHUB_ENV
           echo "HEROKU_APP_NAME=puzzle-lend" >> $GITHUB_ENV
       - name: Run chekout
         uses: actions/checkout@v2
       - name: Set env
-        run: heroku config:set REACT_APP_STAND=${{env.REACT_APP_STAND}} -a ${{ env.HEROKU_APP_NAME }}
+        run: heroku config:set REACT_APP_NODE_ENV=${{env.REACT_APP_NODE_ENV}} -a ${{ env.HEROKU_APP_NAME }}
       - name: Deploy to ${{ env.HEROKU_APP_NAME }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
